<resources>
    <string name="app_name">Book Blossom</string>
    <string name="welcome">Welcome to Book Blossom</string>
    <string name="let_s_create_and_account_or_login">Let\'s create an account or logIn</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="create">Create</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="my_books">My Books</string>
    <string name="search_books">Search books</string>
    <string name="profile_picture">profile picture</string>
    <string name="category_name">Category Name</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author Name</string>
    <string name="genre">Genre</string>
    <string name="start_reading">Start Reading</string>
    <string name="change_password">Change Password</string>
    <string name="description">description</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="add_new_book">Add new Book</string>
    <string name="year">Year</string>
    <string name="add_book">Add Book</string>
    <string name="select_cover">Select Cover</string>
    <string name="view_pdf">View PDF</string>
    <string name="author_email">Author Email</string>
    <string name="book_description">Book Description</string>
    <string name="about_author">About Author</string>
    <string name="pages">Pages</string>
    <string name="chapters">Chapters</string>
    <string name="select_pdf">Select PDF</string>
    <string name="submit">Submit</string>
    <string name="review">Review</string>
    <string name="add_review">Add review</string>
    <string name="person_name">Person Name</string>
    <string name="the_actual_review_added_by_user">The actual review added by user.</string>
    <string name="reviews">Reviews</string>
    <string name="book_title">Book Title</string>
    <string name="the_book_description">The Book Description</string>
    <string name="currently_reading">CURRENTLY READING</string>
    <string name="to_read">TO READ</string>
    <string name="favourite_books">FAVOURITE BOOKS</string>
    <string name="save_changes">Save Changes</string>
    <string name="click_to_select_image">Click to select image</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="author_profile_pic">Author Profile Pic</string>
    <string name="book_blossom">Book Blossom</string>
    <string name="new_version_available">New version available</string>
    <string name="please_update_the_app_to_the_new_version">Please, update the app to the new version.</string>
    <string name="update">Update</string>
    <string name="you_have_the_latest_version">You have the latest version.</string>
    <string name="version">Version</string>
    <string name="number_of_chapters">Number of Chapters: %1$s</string>
    <string name="number_of_pages">Number of Pages: %1$s</string>
    <string name="year_released">Year Released: %1$s</string>
    <string name="pdf_not_available">PDF URL is not available</string>
    <string name="no_pdf_app_found">No application found to open PDF</string>
    <string name="profile_name_template">Hi, %1$s</string>
    <string name="manage_account">Manage Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="book_image">Book Image</string>
    <string name="fragments">Fragments</string>
    <string name="your_email_address">Your Email Address</string>
</resources>