<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/buttonTint">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvBookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poetsen_one_regular"
            android:paddingHorizontal="16dp"
            android:text="@string/book_name"
            android:textColor="@color/mainPageText"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBookName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poetsen_one_regular"
            android:text="@string/author_name"
            android:textColor="@color/author"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAuthor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poetsen_one_regular"
            android:text="@string/genre"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvChapters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvGenre"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poetsen_one_regular"
            android:text="@string/chapters"
            android:textColor="@color/box_stroke"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvChapters"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poetsen_one_regular"
            android:text="@string/pages"
            android:textColor="@color/box_stroke"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPages"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poetsen_one_regular"
            android:text="@string/year"
            android:textColor="@color/box_stroke"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvYear"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poetsen_one_regular"
            android:paddingHorizontal="24dp"
            android:text="@string/description"
            android:textColor="@color/description"
            android:textSize="16sp" />

        <Button
            android:id="@+id/startReading"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/outlined_button"
            android:fontFamily="@font/poetsen_one_regular"
            android:text="@string/start_reading"
            android:textAllCaps="false"
            android:textColor="@color/mainPageText" />

    </RelativeLayout>
</ScrollView>
