<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:background="@drawable/gradient_manage_page_background">

    <!-- Profile Picture -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/account_circle_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        tools:layout_editor_absoluteX="24dp">

        <!-- Author Name -->
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poetsen_one_regular"
            android:text="@string/author_name"
            android:textSize="22sp"
            android:layout_marginVertical="20dp"
            android:textColor="@color/mainPageText" />

        <!-- Author Email -->
        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poetsen_one_regular"
            android:text="@string/author_email"
            android:textSize="22sp"
            android:layout_marginVertical="20dp"
            android:textColor="@color/mainPageText" />

        <!-- About Author -->
        <TextView
            android:id="@+id/about_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/poetsen_one_regular"
            android:text="@string/about_author"
            android:textColor="@color/description"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
