<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/shape_rect">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_version_available"
            android:textColor="@color/mainPageText"
            android:fontFamily="@font/poetsen_one_regular"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"/>

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/poetsen_one_regular"
            android:text="@string/please_update_the_app_to_the_new_version"
            android:paddingHorizontal="16dp"
            android:textSize="16sp" />

        <Button
            style="@style/UpdateDialog"
            android:id="@+id/dialog_button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:paddingHorizontal="30dp"
            android:textColor="@color/mainPageText"
            android:fontFamily="@font/poetsen_one_regular"
            android:text="@string/update" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
