<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:background="@drawable/gradient_manage_page_background">

    <!-- Profile Picture -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/account_circle_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:fontFamily="@font/poetsen_one_regular"
        android:text="@string/click_to_select_image"
        android:textColor="@color/mainPageText"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        tools:layout_editor_absoluteX="24dp">

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poetsen_one_regular"
            android:hint="@string/email"
            android:textColorHint="@color/mainPageText"
            app:boxStrokeColor="@color/box_stroke"
            app:boxStrokeWidth="2dp"
            app:cursorColor="@color/box_stroke"
            app:hintTextColor="@color/box_stroke"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poetsen_one_regular"
                android:text="@string/your_email_address"
                android:textSize="20sp"
                android:textColor="@color/mainPageText"
                tools:ignore="VisualLintTextFieldSize"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Username -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poetsen_one_regular"
            android:hint="@string/name"
            android:textColorHint="@color/mainPageText"
            app:boxStrokeColor="@color/box_stroke"
            app:boxStrokeWidth="2dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:counterTextColor="@color/mainPageText"
            app:cursorColor="@color/box_stroke"
            app:hintTextColor="@color/box_stroke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poetsen_one_regular"
                android:inputType="textCapWords"
                android:textColor="@color/mainPageText"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Date of Birth -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dobInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poetsen_one_regular"
            android:hint="@string/date_of_birth"
            android:textColorHint="@color/mainPageText"
            app:boxStrokeColor="@color/box_stroke"
            app:boxStrokeWidth="2dp"
            app:cursorColor="@color/box_stroke"
            app:helperText="DD-MM-YYYY"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/mainPageText"
            app:hintTextColor="@color/box_stroke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poetsen_one_regular"
                android:inputType="datetime"
                android:textColor="@color/mainPageText"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Save Changes Button -->

    <Button
        android:id="@+id/btn_save_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/outlined_button"
        android:fontFamily="@font/poetsen_one_regular"
        android:text="@string/save_changes"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.242"
        tools:ignore="VisualLintButtonSize" />

    <!-- Change Password Button -->
    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/outlined_button"
        android:fontFamily="@font/poetsen_one_regular"
        android:text="@string/change_password"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_save_changes"
        app:layout_constraintVertical_bias="0.221"
        tools:layout_editor_absoluteX="20dp"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>