<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/main_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poetsen_one_regular"
        android:text="@string/let_s_create_and_account_or_login"
        android:textColor="@color/mainPageText"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/outlined_button"
        android:fontFamily="@font/poetsen_one_regular"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/mainPageText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/logIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.949"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="336dp"
        android:background="@drawable/outlined_button"
        android:fontFamily="@font/poetsen_one_regular"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/mainPageText"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>